--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     </nav>
   </aside>
 
+  <div id="sidebarBackdrop" aria-hidden="true"></div>
+
   <!-- Conteúdo principal -->
   <main id="content" class="content">
     <!-- Início / Hero -->
