fix: atualiza contatos para 'desenvolvimento'

--- a/index.html
+++ b/index.html
@@ -257,22 +257,22 @@
 
       <div class="contact-grid">
         <a class="card contact" href="mailto:lucaslucindo@gmail.com" target="_blank" rel="noopener">
-          <h3>📧 E-mail</h3>
+          <h3><img src="assets/gmail.png" alt="Ícone de e-mail" class="icon-title">E-mail</h3>
           <p>lucaslucindo@gmail.com</p>
         </a>
 
-        <a class="card contact" href="https://wa.me/5531996547914" target="_blank" rel="noopener">
-          <h3>💬 WhatsApp</h3>
+        <a class="card contact" href="https://wa.me/5531996547914" target="_blank" rel="noopener">          
+          <h3><img src="assets/whatsapp.png" alt="Ícone de e-mail" class="icon-title">WhatsApp</h3>
           <p>+55 (31) 9 8325-2258</p>
         </a>
 
-        <a class="card contact" href="https://www.linkedin.com/in/lucas-lucindo-81a11750" target="_blank" rel="noopener">
-          <h3>🔗 LinkedIn</h3>
+        <a class="card contact" href="https://www.linkedin.com/in/lucas-lucindo-81a11750" target="_blank" rel="noopener">          
+          <h3><img src="assets/linkedin.png" alt="Ícone de e-mail" class="icon-title">LinkedIn</h3>
           <p>/in/lucas-lucindo-81a11750</p>
         </a>
 
         <a class="card contact" href="https://github.com/lucaslucindo" target="_blank" rel="noopener">
-          <h3>💻 GitHub</h3>
+          <h3><img src="assets/github.png" alt="Ícone de e-mail" class="icon-title">GitHub</h3>
           <p>@lucaslucindo</p>
         </a>
       </div>
